# pygrader

./: .gitignore  .gitmodules  README.md  apt-packages.txt  gen_assignment.sh  grade.py  hw_setup.py  install_dependencies.sh  pyproject.toml
common/: env.py  grades.py  hw.py  hw_base.py  printing.py  submissions.py  utils.py
demos/demo/: deadline.txt  grader.py
templates/: grader.py.in
